tilføjet billed lamborghini

--- a/index.html
+++ b/index.html
@@ -8,11 +8,29 @@
     <title>Et simpelt HTML eksempel</title>
 </head>
 <body>
-<h1>HTML er let at lære</h1>
+<h1>Velkommen til det dejlige område - Slamrebjerg</h1>
 <p>
-    Velkommen til det dejlige område - Slamrebjerg
+
 </p>
 
-<p>Dette er det andet afsnit.</p>
+   <img src="lamborghini.jpg" width="800"/>
+
+
+
 </body>
 </html>
+<!--
+<html lang="da">
+<head>
+    <title>Lamborghini page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+<h1>Lamborghini shop</h1>
+<p>Bilsælgerne hjælper altid.</p>
+<img src="lamborghini.jpg" width="800"/>
+<!--
+        <img src="https://cache.desktopnexus.com/cropped-wallpapers/798/798252-1680x1050-[DesktopNexus.com].jpg?st=EDMzxDDrkfVjdSapS5ZvKw&e=1548627009" width="800"/>
+   -->
+
