--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Et simpelt HTML eksempel</title>
 </head>
 <body>
-<h1>Velkommen - Slamrebjerg</h1>
+<h1>Velkommen -  flot Slamrebjerg</h1>
 <p>
 
 </p>
